--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ Thumbs.db
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+
+
+## Added by Charlie
+# Editor files
+*.sublime-project
+*.sublime-workspace
+.idea
+
+# Javascript/Node
+node_modules
+
+# Backbase
+.bbrc
